fixing bottom spacing in teaser

--- a/tetrapak-publicweb/ui.dev/src/source/templates/components/textImage/_textImage.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/templates/components/textImage/_textImage.scss
@@ -64,13 +64,13 @@
     }
 
     &__subTitle {
-        @include margin-top($margin-md);
-        @include margin-bottom($margin-xss);
+        @include margin-top($margin-l);
+        @include margin-bottom($margin-sm);
         color: $color-boulder;
         text-transform: $uppercase;
         @media #{$desktop} {
             @include margin-top($margin-zero);
-            @include margin-bottom($margin-xs);
+            @include margin-bottom($margin-md);
             text-transform: $uppercase;
         }
     }
@@ -94,7 +94,7 @@
     }
 
     &__link {
-        @include margin-bottom($padding-md);
+        @include margin-bottom($padding-l);
         @include padding($padding-zero);
         background-color: none;
 
